Mark orphaned blocks by using prysms new api (#700)
* update prysm api definitions
use new canonical flag for orphan checking

* add method to re-export the canon status for all blocks

* add method to re-export the canon status for all blocks

* add method to re-export the canon status for all blocks

* add method to re-export the canon status for all blocks

* add method to re-export the canon status for all blocks

* add method to re-export the canon status for all blocks

* add method to re-export the canon status for all blocks

* change epoch order

* /validator/{index}/stats -> /validator/stats/{index}

* update api-docs
